src/layouts/AppLayout/components/Header/Header.module.css
.header {
  display: flex;
  align-items: center;
  padding: 10px 30px;
}

.logo {
  width: 120px;
  display: block;
}

.login-link {
  text-decoration: none;
  color: var(--color-text-disabled);
  font-weight: bold;
  border-radius: 5px;
  display: flex;
  align-items: center;
  gap: 10px;
}

.login-link-active {
  color: var(--color-text-primary);
  font-weight: bold;
}

.logout-button {
  display: flex;
  align-items: center;
  gap: 10px;
  border: none;
  background: transparent;
  color: var(--color-text-disabled);
  font-size: 16px;
  font-weight: bold;
  padding: 0;
  cursor: pointer;
}

.logout-button:hover {
  color: var(--color-text-primary);
  font-weight: bold;
}

.menu-button {
  display: flex;
  align-items: center;
  justify-content: center;
  border: none;
  background: transparent;
  padding: 0;
  cursor: pointer;
}

.menu {
  position: fixed;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  z-index: 10;
}

.menu-content {
  background: white;
  position: absolute;
  top: 0;
  right: 0;
  width: 45%;
  height: 100%;
  padding: 0 0 20px 20px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

@media all and (max-width: 576px) {
  .header {
    justify-content: space-between;
  }

  .logo {
    width: 100px;
  }
}

